fix truncated confirmation message

--- a/docroot/themes/custom/vagovclaro/assets/scss/components/_paragraphs.scss
+++ b/docroot/themes/custom/vagovclaro/assets/scss/components/_paragraphs.scss
@@ -11,9 +11,9 @@
   }
 }
 
-// fixes display of tags title inside paragraphs on FAQ content type
+// fixes truncated text inside paragraphs on several content types
 .js .paragraph-type-top .paragraph-type-title {
-  flex-basis: 25%;
+  flex-basis: 40%;
 }
 
 .js .vagovclaro .paragraph-top {
